# astrosoft_test

loader/: Cargo.toml  README.md
loader/src/: main.rs
tsadmin/: .gitignore  README.md  pyproject.toml  requirements.txt
tsadmin/core/: admin.py  flags.py  models.py  urls.py  views.py
tsadmin/core/migrations/: 0001_initial.py
tsadmin/core/tests/: test_flags.py
tsadmin/tsadmin/: asgi.py  settings.py  wsgi.py
