[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
identity-hash = "0.1.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
