[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-escapes = "0.1.1"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
enable-ansi-support = "0.2.1"
futures = "0.3.28"
identity-hash = "0.1.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
url = "2.4.1"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
